--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/fs-extra": "11.0.4",
     "cucumber-console-formatter": "1.0.0",
     "cucumber-html-reporter": "7.1.1",
+    "git": "^0.1.5",
     "pixelmatch": "5.3.0",
     "playwright": "^1.40.1",
     "pngjs": "7.0.0"
