--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -12,7 +12,7 @@ jobs:
   run:
     strategy:
       matrix:
-        node: [ '18', '20' ]
+        node: [ '18' ]
     runs-on: windows-latest
 
     steps:
