--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -24,7 +24,7 @@ jobs:
       run: npm ci
    
     - name: install Playwright
-      run: npx playwright install --with-deps > /dev/null
+      run: npx playwright install --with-deps 
     - name: run features
       run: npm run test
     - name: Upload test results
